--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,9 +9,18 @@
     "dev": "env-cmd -f ./config/.env nodemon -x ts-node -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "env-cmd": "10.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "pino": "^8.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/pino": "^7.0.5",
+    "nodemon": "2.0.19",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.0"
   }
 }
