--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   ],
   "scripts": {
     "dev": "run-p dev:*",
-
     "front": "yarn workspace @wiscro/front",
     "admin": "yarn workspace @wiscro/admin",
     "common": "yarn workspace @wiscro/common",
-
     "dev:front": "yarn workspace @wiscro/front dev",
     "dev:admin": "yarn workspace @wiscro/admin dev",
     "dev:common": "yarn workspace @wiscro/common build:watch",
@@ -46,7 +44,7 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@nextui-org/react": "1.0.0-beta.10",
+    "@nextui-org/react": "^1.0.0-beta.12",
     "axios": "0.27.2",
     "next": "12.3.1",
     "next-themes": "0.2.1",
