--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
+    "@line/liff": "^2.22.0",
     "@nextui-org/react": "^1.0.0-beta.12",
     "axios": "1.3.4",
     "next": "13.2.4",
