--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "axios": "1.3.4",
+    "bootstrap": "5.3.1",
     "next": "13.4.19",
     "next-themes": "0.2.1",
     "react": "18.2.0",
