--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
     "axios": "1.5.0",
-    "bootstrap": "5.3.1",
     "next": "13.4.19",
     "next-themes": "0.2.1",
     "react": "18.2.0",
