--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.6.0",
     "@typescript-eslint/parser": "6.6.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.0",
@@ -28,17 +29,19 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "npm-run-all": "4.1.5",
+    "postcss": "^8.4.30",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
+    "@nextui-org/react": "^2.1.13",
     "axios": "1.5.0",
-    "next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "next": "^13.5.2",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
