--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@nextui-org/react": "^2.1.13",
     "axios": "1.5.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.2",
     "next-themes": "0.2.1",
