--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.67.0",
-    "swr": "2.2.2"
+    "swr": "2.2.2",
+    "url-join": "^5.0.0"
   }
 }
