--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "sass": "^1.67.0",
     "swr": "2.2.2",
     "url-join": "^5.0.0"
