--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\""
   },
   "devDependencies": {
-    "@types/node": "18.18.6",
+    "@types/node": "20.8.7",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "6.7.5",
-    "@typescript-eslint/parser": "6.7.5",
+    "@typescript-eslint/eslint-plugin": "6.8.0",
+    "@typescript-eslint/parser": "6.8.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "8.51.0",
+    "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-flowtype": "8.0.3",
@@ -41,13 +41,12 @@
     "@nextui-org/react": "^2.1.13",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.2",
+    "next": "14.0.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "sass": "^1.67.0",
-    "swr": "2.2.4",
     "url-join": "^5.0.0"
   }
 }
