--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_SERVER_URL=http://localhost:8000
 NEXT_PUBLIC_LIFF_ID=1660803751-R9oXkrdb
+GOOGLE_CLIENT_ID=902343324410-di541uqennm15lg3343103rm4s0s79m5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=secretXXX
+MONGODB_URI=mongodb://localhost:27017/wiscro
