--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@nextui-org/react": "^2.1.13",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
+    "mongodb": "^6.2.0",
     "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
