--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "sass": "^1.67.0",
+    "swr": "^2.2.4",
     "url-join": "^5.0.0"
   }
 }
