--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "next": "15.3.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.509.0",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@types/node": "^20",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
