--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@line/bot-sdk": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
