--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
