--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.509.0",
     "marked": "^15.0.12",
+    "microcms-js-sdk": "^3.2.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
