--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@line/bot-sdk": "^10.0.0",
@@ -17,7 +17,7 @@
     "lucide-react": "^0.509.0",
     "marked": "^15.0.12",
     "microcms-js-sdk": "^3.2.0",
-    "next": "15.3.2",
+    "next": "^16.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^19",
     "@types/turndown": "^5.0.5",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
